tests/hevm/fail/shape-2/shape-2.act
contract C

contract A

// contract A
constructor
interface constructor(uint z)

iff
   CALLVALUE == 0

creates
   uint x := z


transition x
interface x()

iff
   CALLVALUE == 0

returns
   pre(x)

// contract C
constructor
interface constructor()
iff
   CALLVALUE == 0

creates
   A a1 := create A(42)
   A a2 := create A(17)

transition change
interface change()

iff

  CALLVALUE == 0
  
storage
  a1 := a2